# wikicode

./: .gitignore  AGENTS.md  README.md  VERSION_EXPERT.json  fix_banner.py  fix_build_ui.py  install_uos.sh  install_win.bat  install_win.ps1  install_win.ps1.bak  plan.md  pyproject.toml  requirements.txt  start_gbrain_ui.ps1  tiny.py
.wikicoder/: config.example.yaml  config.yaml  session_state.json
.wikicoder/gbrain_home/: config.json
.wikicoder/rules/: general_engineering_rules.md  memory_management_rules.md  multi_agent_rules.md  nextjs_rules.md  python_api_rules.md
.wikicoder/scripts/: fix_docstrings.py
data/dictionaries/: business_terms.yaml  synonyms_zh.yaml
data/eval/: retrieval_cases.jsonl  retrieval_cases_zh.jsonl
data/raw/: demo.md  p1.txt  p2.txt  recycle.md  tmp_patch_test.txt
graphify_out/: ai_diagnostic.py  audit_engine.py  build_semantic_pipeline.py  debug_export.py  debug_rich.py  expert_sync.py  expert_test.py  expert_ui_mockup.html  final_render.py  pure_business_graph.html  strategic_ui_v2.html
scratch/: fix_source.py  test_agent_olt.py  test_build.py  test_build_log.txt  test_canvas.canvas  test_canvas.md  test_encode.py  test_tokenization.py  test_tokenization_v2.py  test_wiki.py  test_zh_headings.canvas  test_zh_headings.md  verify_canvas.py  verify_canvas_v2.py
scripts/: init_gbrain_jiutian.py  install_gbrain.ps1
src/: __init__.py  main.py  main.py_completer.py  main.py_kb_fix.py  tui_engine.py
tests/: complex_scenario_tests.py  latest_test_report.json
wikicoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+66 files in other folders)
